<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Snaking Numbers an Android game.
  ~ Copyright (c) 2014 Marvin Bruns
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_group_network">
        <CheckBoxPreference android:key="isExplicitOffline" android:title="@string/settings_explicit_offline_title" android:summary="@string/settings_explicit_offline_summary" android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_group_game_info">
        <Preference android:title="@string/title_activity_tut">
            <intent
                android:targetClass="de.bno.snakingnumbers.tutorial.Tutorial"
                android:targetPackage="de.bno.snakingnumbers" />
        </Preference>
        <Preference android:title="@string/title_activity_about">
            <intent
                android:targetClass="de.bno.snakingnumbers.about.About"
                android:targetPackage="de.bno.snakingnumbers" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>