<!--
  ~ Snaking Numbers an Android game.
  ~ Copyright (c) 2014 Marvin Bruns
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/stone_tile_bg"
    tools:context=".MainMenu">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/snake_head"
        android:contentDescription="@string/snake_description"
        android:scaleType="fitCenter" >
    </ImageView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_new"
            android:id="@+id/title_new_game"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:clickable="false"
            android:textColor="@color/bright2_theme_color"
            android:textStyle="bold"
            android:typeface="monospace" />

        <!-- Easy Button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/game_easy"
            android:id="@+id/btn_easy_game"
            android:layout_below="@+id/title_new_game"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/easy"
            android:drawableStart="@drawable/easy"
            android:layout_alignParentStart="true"
            android:textColor="@color/bright1_theme_color"
            android:longClickable="false"
            android:textStyle="bold" />
        <!-- Easy Button -->

        <!-- Medium Button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/game_medium"
            android:id="@+id/btn_medium_game"
            android:layout_below="@+id/btn_easy_game"
            android:drawableLeft="@drawable/medium"
            android:drawableStart="@drawable/medium"
            android:layout_centerHorizontal="true"
            android:longClickable="false"
            android:textColor="@color/bright1_theme_color"
            android:textStyle="bold" />
        <!-- Medium Button -->

        <!-- Hard Button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/game_hard"
            android:id="@+id/btn_hard_game"
            android:drawableLeft="@drawable/hard"
            android:longClickable="false"
            android:drawableStart="@drawable/hard"
            android:layout_below="@+id/btn_medium_game"
            android:layout_centerHorizontal="true"
            android:textColor="@color/bright1_theme_color"
            android:textStyle="bold" />
        <!-- Hard Button -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_about"
            android:id="@+id/btn_about"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:longClickable="false"
            android:layout_alignParentStart="true"
            android:textColor="@color/bright1_theme_color" />

        <!-- Exit Button -->

        <!-- Exit Button -->

    </RelativeLayout>
</RelativeLayout>
